2025-11-14T00:44:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19350486108 # 1304
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-14
* notice: last 14d: unq all: 13 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1267 6035 / 1281 6070
* notice: next accum: outdated-unq outdated-all / unq all: 1268 6042 / 1282 6071
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-30] / [2025-11-13]

2025-11-13T00:43:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19316625815 # 1302
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1265 6033 / 1279 6067
* notice: next accum: outdated-unq outdated-all / unq all: 1267 6035 / 1281 6070
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2025-10-29] / [2025-11-12]

2025-11-12T00:44:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19282657272 # 1300
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 14 34
* notice: prev accum: outdated-unq outdated-all / unq all: 1265 6033 / 1278 6062
* notice: next accum: outdated-unq outdated-all / unq all: 1265 6033 / 1279 6067
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2025-11-11]

2025-11-11T12:17:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265338499 # 1299