@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-14T00:44:13Z",
-  "count_outdated" : 6042,
-  "uniques_outdated" : 1268,
-  "count" : 6071,
-  "uniques" : 1282,
+  "timestamp" : "2025-11-15T00:43:23Z",
+  "count_outdated" : 6043,
+  "uniques_outdated" : 1269,
+  "count" : 6077,
+  "uniques" : 1283,
   "views" : [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-01T00:00:00Z",
       "count": 2,
@@ -91,6 +82,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-14T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
