@@ -1,12 +1,7 @@
 {
-  "count": 29,
+  "count": 34,
   "uniques": 13,
   "views": [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-11-01T00:00:00Z",
       "count": 2,
@@ -50,6 +45,11 @@
     {
       "timestamp": "2025-11-13T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-14T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
