@@ -1,3 +1,12 @@
+2025-11-15T00:43:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19381609740 # 1306
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
+* notice: last 14d: unq all: 13 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 1268 6042 / 1282 6071
+* notice: next accum: outdated-unq outdated-all / unq all: 1269 6043 / 1283 6077
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: removed / changed dates: [2025-10-31] / [2025-11-14]
+
 2025-11-14T00:44:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19350486108 # 1304
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-14
